<resources>
    <string name="app_name">타이고</string>
    <string name="app_name_eng">Ta-eye-go</string>
    <string name="SettingsButton">설정</string>
    <string name="BookmarkButton">즐겨찾기</string>
    <string name="RefreshButton">현재 정류장 새로고침</string>
    <string name="BookBusButton">예약</string>
    <string name="title">타이고</string>
    <string name="title_ex">시각장애인용 버스 승하차 예약 어플</string>
    <string name="bus_btn">기사용</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="email_login"><u>이메일로 로그인하기</u></string>
    <string name="tigerimage_blur">tigerimage_blur</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password2">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="membership">회원가입</string>
    <string name="join">가입하기</string>
    <string name="email_hint">taeyego@gmail.com</string>
    <string name="before">이전 페이지로 돌아가기</string>
    <string name="dog">안내견</string>
    <string name="dog_select">안내견 견주라면 on을 눌러주세요</string>
    <string name="theme">테마 선택</string>
    <string name="yellow">노랑</string>
    <string name="blue">파랑</string>
    <string name="yellowTheme">노랑 테마</string>
    <string name="blueTheme">파랑 테마</string>
    <string name="explain">간단 사용 설명서</string>
    <string name="logout">로그아웃</string>
    <string name="next_page">다음 페이지로 이동</string>
    <string name="previous_page">이전 페이지로 이동</string>
    <string name="bookmark_rectangle">사각형</string>
    <string name="menu">menu</string>
    <string name="star">star</string>
    <string name="arrow">에서</string>
    <string name="background_line">background_line</string>
    <string name="division_line">번 버스</string>
    <string name="bus">bus</string>
    <string name="with_guide_dog">안내견 있음</string>
    <string name="taeyego_bot">타이고</string>
    <string name="startSttn">출발 정류장</string>
    <string name="busNum">버스 번호</string>
    <string name="endSttn">도착 정류장</string>
    <string name="settings">설정</string>
    <string name="mic_btn">마이크</string>
    <string name="back_btn">이전 화면으로 이동</string>
    <string name="oneThird">세 페이지 중 첫 번째 페이지</string>
    <string name="twoThirds">세 페이지 중 두 번째 페이지</string>
    <string name="threeThirds">세 페이지 중 세 번째 페이지</string>
    <string name="newFavorites">즐겨찾기 신규추가</string>
    <string name="stationNm">정류장 이름</string>
    <string name="threeSttnLeft">손님이 하차하는 정류장까지 두 정거장 남았습니다.</string>
    <string name="com_google_login_button">구글 계정으로 로그인</string>
    <string name="refresh">새로고침</string>
    <string name="getoff">도중하차</string>
</resources>