<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.LoginMain">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/app_name"
        android:importantForAccessibility="no"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/app_name_eng"
        android:importantForAccessibility="no"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/title_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/title_ex"
        android:importantForAccessibility="no"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_eng" />

    <ImageView
        android:id="@+id/tiger_blur"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="-80dp"
        android:background="@drawable/tiger_icon"
        android:importantForAccessibility="no"
        android:backgroundTint="#40FFDC3C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        android:contentDescription="@string/tigerimage_blur" />

    <ImageButton
        android:id="@+id/kakao_login_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/com_kakao_login_button"
        android:src="@drawable/ic_kakao_login"
        app:layout_constraintBottom_toTopOf="@+id/bus_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/com_google_login_button"
        app:layout_constraintBottom_toTopOf="@+id/kakao_login_button"
        app:layout_constraintEnd_toEndOf="@+id/kakao_login_button"
        app:layout_constraintStart_toStartOf="@+id/kakao_login_button"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bus_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/login_button_shape"
        android:gravity="center"
        android:text="@string/bus_btn"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/google_sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/google_sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>