<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

<!--    <include-->
<!--        android:id="@+id/setting_menu"-->
<!--        layout="@layout/menu_bar"-->
<!--        app:menuText="@{`설정`}" />-->

    <TextView
        android:id="@+id/text_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/dog"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_dog2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dog_select"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintTop_toBottomOf="@+id/text_dog" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dog"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toEndOf="@+id/text_dog"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_thema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/thema"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yellow"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/login_button_shape"
        android:gravity="center"
        android:text="@string/yellow"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_blue"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toEndOf="@+id/text_thema"
        app:layout_constraintTop_toBottomOf="@+id/switch_dog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_blue"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button_shape"
        android:gravity="center"
        android:text="@string/blue"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toEndOf="@+id/text_thema"
        app:layout_constraintTop_toBottomOf="@+id/switch_dog" />

    <TextView
        android:id="@+id/text_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/explain"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_thema" />

    <TextView
        android:id="@+id/text_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/logout"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_explain" />

</androidx.constraintlayout.widget.ConstraintLayout>