<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.main.MainActivity"
    android:label="@null">

    <!-- 피그마에서 크기 참조 후 해당px * (160/440) 한 값이 dp입니다.
    소숫점 첫째짜리까지 표현해줍시다! 버튼 크기는 dp로 통일해 주세요. -->


    <ImageView
        android:id="@+id/settingBtn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/SettingsButton"
        android:src="@drawable/setting_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966"
        app:tint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/bookmarkBtn"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/BookmarkButton"
        android:src="@drawable/star_yellow"
        app:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <ImageView
        android:id="@+id/bookBusBtn"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/BookBusButton"
        android:src="@drawable/book_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <RelativeLayout
        android:id="@+id/currentLocationBox"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:background="@drawable/letterbox_yellow"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" >

        <TextView
            android:id="@+id/currentLocationText"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="현재 정류장   "
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/nextStationText"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_below="@id/currentLocationText"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="불러오는 중..."
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:autoSizeTextType="uniform" />

        <ImageView
            android:id="@+id/refreshBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/RefreshButton"
            android:src="@drawable/refresh_yellow"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorPrimary" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>